--- a/_sass/new-styles/modules/footer/_secondary.scss
+++ b/_sass/new-styles/modules/footer/_secondary.scss
@@ -231,7 +231,7 @@
       }
 
       &__item {
-        height: 50px;
+        height: 55px;
       }
     }
 
